css/main.css
/*
* Prefixed by https://autoprefixer.github.io
* PostCSS: v8.3.6,
* Autoprefixer: v10.3.1
* Browsers: last 4 version
*/

/* GENERAL */

@import './section.css';
@import './home.css';
@import './relative.css';
@import './variables.css';
@import './navigation.css';
@import './layout.css';

*,
::before,
::after {
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

:root {
    --hue: 336;
    --header-height: 90px;
    --background-color-toggle: hsl(var(--hue), 5%, 80%);
    --warning-color: hsl(17, 100%, 40%);
    --warning-background-color: hsl(56, 100%, 91%);
    --pre-background-color: #282a36;
    --pre-comment-color: #6272a4;
    --pre-selector-color: #50fa7b;
    --pre-property-color: #8be9fd;
    --pre-attribute-value-color: #f1fa8c;
    --pre-pink: #ff79c6;
    --pre-purple: #bd93f9;
    --illustration-purple: hsl(270, 57%, 38%);
    --illustration-green: hsl(150, 80%, 65%);
    --illustration-pink: var(--pre-pink);
    --max-width-container: 70ch;
}

:root[theme="light"] {
    --main-color: hsl(var(--hue), 100%, 50%);
    --constrast-color: hsl(var(--hue), 60%, 40%);
    --dark-color: hsl(var(--hue), 20%, 70%);
    --decorative-color: hsl(var(--hue), 100%, 50%);
    --background-color: hsl(var(--hue), 28%, 86%);
    --background-color-odd: hsl(var(--hue), 20%, 88%);
    --title-color: hsl(var(--hue), 90%, 10%);
    --text-color: hsl(var(--hue), 90%, 10%);
    --description-text-color: hsl(var(--hue), 90%, 20%);
    --description-background-color: hsl(var(--hue), 30%, 93%);
    --code-background-color: hsla(var(--hue), 30%, 100%, 0.6);
    --warning-background-color: var(--code-background-color);
    --code-color: hsl(var(--hue), 60%, 40%);
    --nav-bullet-color: hsl(var(--hue), 60%, 65%);
    --nav-bullet-selected: var(--constrast-color);
}

:root[theme="dark"] {
    --main-color: hsl(var(--hue), 100%, 50%);
    --constrast-color: hsl(var(--hue), 60%, 40%);
    --dark-color: hsl(var(--hue), 40%, 10%);
    --decorative-color: hsl(var(--hue), 100%, 45%);
    --background-color: hsl(var(--hue), 20%, 20%);
    --background-color-odd: hsl(var(--hue), 20%, 16%);
    --title-color: hsl(var(--hue), 40%, 92%);
    --text-color: hsl(var(--hue), 20%, 80%);
    --description-text-color: hsl(var(--hue), 90%, 10%);
    --description-background-color: hsl(var(--hue), 10%, 90%);
    --code-background-color: hsla(var(--hue), 40%, 12%);
    --warning-background-color: var(--code-background-color);
    --code-color: hsl(var(--hue), 30%, 86%);
    --nav-bullet-color: var(--main-color);
    --nav-bullet-selected: white;
}

html {
    font-size: 1.125rem;
    color: var(--title-color);
    font-family: 'Poppins', sans-serif;
    scroll-behavior: smooth;
}

h1 {
    font-size: calc(3rem + 2vw);
    color: var(--title-color);
}

h1,
h2,
h3,
h4 {
    font-family: 'Balsamiq Sans', cursive, sans-serif;
}

a {
    color: var(--title-color);
    -webkit-text-decoration-line: underline;
    text-decoration-line: underline;
    -webkit-text-decoration-color: var(--main-color, black);
    text-decoration-color: var(--main-color, black);
    text-underline-offset: 5px;
    text-decoration-thickness: 1px;
}

p {
    max-width: var(--max-width-container, 70ch);
    margin-bottom: 0.75em;
    text-align: left;
    line-height: 1.7;
    color: var(--text-color);
}

code {
    background-color: var(--code-background-color);
    color: var(--code-color);
    font-weight: bold;
    padding: 0 0.3em;
    border-radius: 3px;
}

.warning {
    padding: 0.15em 0.3em 0.15em 0.3em;
    color: var(--warning-color);
    background-color: var(--warning-background-color);
    border-radius: 3px;
}

.text-right {
    text-align: right !important;
}

.text-center {
    text-align: center !important;
}

.visually-hidden:not(:focus):not(:active) {
    clip: rect(0 0 0 0);
    -webkit-clip-path: inset(100%);
    clip-path: inset(100%);
    height: 1px;
    overflow: hidden;
    position: absolute;
    white-space: nowrap;
    width: 1px;
}

.info-message {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    gap: 1.25rem;
    color: hsl(195, 60%, 20%);
    background-color: hsl(195, 50%, 70%);
    padding: 1.25rem;
    border-radius: 0.25rem;
    margin-bottom: 1rem;
}

.info-message p {
    margin-bottom: 0;
    color: hsl(195, 60%, 20%);
}

.info-message .fa-lightbulb {
    -webkit-box-flex: 0;
    -ms-flex: 0 0 1rem;
    flex: 0 0 1rem;
    width: 1rem;
    margin: 0 1rem;
}

ul {
    line-height: 1.5;
}

li::marker {
    font-size: 1.2em;
    color: var(--main-color, black);
}

/* NAV */

.nav-bullets {
    position: fixed;
    top: var(--header-height, 0);
    bottom: 0;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    z-index: 1;
    margin: 0;
    padding: 0;
    line-height: 1.5;
}

/* .nav ul {
    overflow: auto;
} */

.nav-bullets a {
    font-size: 1rem;
    position: relative;
    display: block;
    padding: 0.5rem 0 0.5rem 2rem;
    color: white;
    text-decoration: none;
}

.nav-bullets a:hover span {
    -webkit-transform: scale(1);
    -ms-transform: scale(1);
    transform: scale(1);
}

.nav-bullets a:hover .nav-label {
    opacity: 1;
}

.nav-bullets a.selected-nav .nav-bullet {
    background-color: var(--nav-bullet-selected);
}

.nav-bullets span {
    -webkit-transform: scale(0.6);
    -ms-transform: scale(0.6);
    transform: scale(0.6);
}

.nav-bullets .nav-label {
    display: inline-block;
    color: var(--nav-bullet-selected);
    margin-left: 1rem;
    opacity: 0;
    -webkit-transform-origin: -50%;
    -ms-transform-origin: -50%;
    transform-origin: -50%;
    -webkit-transition: opacity 0.5s, -webkit-transform 0.2s;
    transition: opacity 0.5s, -webkit-transform 0.2s;
    -o-transition: transform 0.2s, opacity 0.5s;
    transition: transform 0.2s, opacity 0.5s;
    transition: transform 0.2s, opacity 0.5s, -webkit-transform 0.2s;
}

.nav-bullets .nav-bullet {
    display: inline-block;
    position: relative;
    height: 0.8rem;
    width: 0.8rem;
    border-radius: 50%;
    background-color: var(--nav-bullet-color);
    -webkit-transition: background-color 0.5s, -webkit-transform 0.5s;
    transition: background-color 0.5s, -webkit-transform 0.5s;
    -o-transition: transform 0.5s, background-color 0.5s;
    transition: transform 0.5s, background-color 0.5s;
    transition: transform 0.5s, background-color 0.5s, -webkit-transform 0.5s;
}

.example {
    padding-bottom: 2rem;
}

.example-illustration {
    padding: 1rem 0 2rem 0;
}

.footer {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    gap: 1rem;
    font-size: 0.875rem;
    background-color: var(--dark-color);
    padding: 1rem 2rem;
}

/* UTILS */

.d-none {
    display: none;
}

/* PRE */

pre {
    width: 100%;
    overflow-x: auto;
    padding: 1em;
    margin: auto;
    font-size: 1rem;
    text-align: start;
    background-color: var(--pre-background-color, #282a36);
    color: white;
    border-radius: 0.5em;
    font-family: Consolas, Arial, Helvetica, sans-serif;
}

pre .tag {
    color: var(--pre-pink, #ff79c6);
}

pre .unit {
    color: var(--pre-pink, #ff79c6);
}

pre .number,
pre .value {
    color: var(--pre-purple, #bd93f9)
}

pre .selector {
    color: var(--pre-selector-color, #50fa7b);
}

pre .comment {
    color: var(--pre-comment-color, #6272a4);
}

pre .property,
pre .function {
    color: var(--pre-property-color, #8be9fd);
}

pre .attribute-value,
pre .string-value {
    color: var(--pre-attribute-value-color, #f1fa8c);
}

@media (max-width: 576px) {
    html {
        font-size: 0.875rem;
    }
}

/* MEDIA QUERIES */

@media (max-width: 768px) {
    :root {
        --max-width-container: 100%;
    }

    .info-message {
        -webkit-box-orient: vertical;
        -webkit-box-direction: normal;
        -ms-flex-direction: column;
        flex-direction: column;
        -webkit-box-pack: center;
        -ms-flex-pack: center;
        justify-content: center;
    }

    .info-message .fa-lightbulb {
        -webkit-box-flex: initial;
        -ms-flex: initial;
        flex: initial;
    }

    .info-message p {
        text-align: center;
    }

}

@media (max-width: 1200px) {
    nav {
        display: none;
    }
}

